# siegetank-backend

./: LICENSE.txt  README.md  __init__.py  add_user.py  api  base.py  cc  cc.conf  cc.py  cc_bin  cc_conf  cc_config  circle.yml  common.py  crud.go  hashset.py  layout.json  login.py  openmm.py  post_targets.ipynb  requirements.txt  scv  scv.conf  scv.json  setup.py  test.py  test_cc.py  test_cc2.py  test_hashset.py  test_integration.py  test_us.py  test_ws.py  test_ws2.py  tests.py  us.py  us_conf  util.py  ws  ws.conf  ws.py  (+2 more)
cc/: apollo.py  cc.py  common.py  scv.py
certs/: cc.crt  cc.key  private.pem  public.crt  ws.crt  ws.key
common/: ws_types.py
core/: CMakeLists.txt  Core.cpp  Core.h  FindFFTW.cmake  FindOpenCL.cmake  FindOpenMM.cmake  FindOpenSSL2.cmake  FindPOCO.cmake  OpenMMCore.cpp  XTCWriter.cpp  XTCWriter.h  test_xtc.cpp
core/base/: CMakeLists.txt  Core.cpp  Core.h  certs_bundle_1.pem  certs_bundle_2.pem  certs_bundle_3.pem  certs_bundle_4.pem  certs_bundle_5.pem  md5.cpp  md5.h  picojson.h
core/base/certs/: certs_bundle_0.pem  certs_bundle_6.pem
core/benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  CPUBenchmark.cpp  CPUBenchmark.h  OpenCLBenchmark.cpp  OpenCLBenchmark.h
core/benchmark/clfft/src/: CMakeLists.txt  FindOpenCL.cmake
core/include/: Benchmark.h  CPUBenchmark.h  Core.h  OpenCLBenchmark.h  OpenMMCore.h  root_certs.h
core/include/openmm/: OpenMMCore.h  kbhit.h
core/openmm_core/: CMakeLists.txt  ExitSignal.cpp  ExitSignal.h  OpenMMBenchmark.cpp  OpenMMBenchmark.h  OpenMMCore.cpp  OpenMMCore.h  StateTests.cpp  StateTests.h  XTCWriter.cpp  XTCWriter.h  ezOptionParser.h  gpuinfo.cpp  gpuinfo.h  kbhit.cpp  kbhit.h  main.cpp
core/openmm_core/tests/: CMakeLists.txt  test_openmm_core.cpp
core/src/: CPUBenchmark.cpp  Core.cpp  OpenCLBenchmark.cpp  OpenMMCore.cpp  kbhit.cpp
core/src/binary/: ocore.cpp
core/src/openmm/: OpenMMCore.cpp  XTCWriter.cpp  kbhit.cpp
core/tests/: CMakeLists.txt  start_services  start_services.py  stop_services  stop_services.py  test_benchmark.cpp  test_core.cpp  test_openmm_core.cpp  test_poco.cpp  test_xtc.cpp
docs/: Makefile  architecture.rst  cc.rst  conf.py  deployment.rst  docs_server.py  engines.rst  index.rst  scv.rst  siegetank.rst  tutorial.rst  ws.rst
docs/ext/: httpdomain.py
docs/themes/rtd/: layout.html
docs/themes/rtd/static/: rtd.css_t
redis/: redis.conf
scripts/: bootstrap_aws_cc.sh
scv/: types.go
scv/src/: manager.go  manager_test.go  scv.go  scv_test.go  server.go  skiplist.go  stream.go  target.go  util.go
server/: SQLTypes.py  apollo.py  cc.py  common.py  pattern.go  process2.py  scv.go  scv.json  scv.py  scv_test.go  server.py  test_apollo.py  test_cc.py  test_integration.py  test_ws.py  types.py  ws.py
server/scv/: astream.go  cqueue.go  lock_pattern  manager.go  manager_test.go  managers.go  pqueue.go  queue.go  scv.go  scv_test.go  server.go  stream.go  target.go  target_test.go
server/util/: util.go
siegetank/: __init__.py  base.py  login.py
tests/: start_services  stop_services  test_apollo.py  test_cc.py  test_integration.py  test_scv.py  test_siegetank.py  test_ws.py  utils.py
